Fix color of expand/collapse body text (lyrics)

--- a/src/scss/blog/components/collapse.scss
+++ b/src/scss/blog/components/collapse.scss
@@ -38,7 +38,7 @@
 		margin: 0.5em 0 1.5em 0;
 		padding: 0 0 0.5em 2.5em;
 		line-height: 1.5;
-		color: $color-secondary;
+		color: $color-subdued;
 		background-color: transparent;
 		font-style: initial;
 	}
